Fixed top bar graphic regressions + overflow
Found an appropriate solution to the overflow problem while fixing up the top bar after the angular update broke its styling.

--- a/E-Com-Website/src/app/app.component.css
+++ b/E-Com-Website/src/app/app.component.css
@@ -1,26 +1,18 @@
-.overflowContainer{
-    overflow-x: scroll;
-    background-color: #262697;
-    width: stretch;
-    height: fit-content;
-    border: solid 1px red;
-    margin: 0;
-    display:flex;
-    flex-direction: column;
-    flex-shrink: 0;
-    align-items: stretch;
-}
-
-.router { 
+.page { 
     margin:0px;
-    border: solid 2px black;
+    margin-top: -20px;
     min-height: 90vh;
-    background-color: white;
+    background-color: #262697;
     min-width: fit-content;
 }
 
-.routerContainer{
-    margin:24px;
+.pageContainer{
+    background-color: white;
+    min-height: 90vh;
+}
+
+.routerOffset{
+    margin: 24px
 }
 
 
